[metadata]
name = google_play_reader
author = Luis Cruz
author-email = luismirandacruz@gmail.com
summary = Tool to get information from StackOverflow 
license = MIT
description-file =
    README.md
home-page = https://luiscruz.github.io/
requires-python = >=3.5
classifier = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering
    Topic :: Utilities
[files]
packages =
    stackoverflow_crawler

[flake8]
filename = ./stackoverflow_crawler/**.py
ignore = E101,E241

